objects/Batch_Target_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Batch Target Settings</label>
    <fields>
        <fullName>Lead_Target_Batch_Size__c</fullName>
        <label>Lead Target Batch Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Metrics_Batch_Size__c</fullName>
        <label>Lead Metrics Batch Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Item_Target_Batch_Size__c</fullName>
        <label>Line Item Target Batch Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zero_Product_Lead_Batch_Size__c</fullName>
        <label>Zero Product Lead Batch Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Target_Batch_Size__c</fullName>
        <label>Opportunity Target Batch Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Metrics_Batch_Size__c</fullName>
        <label>Opportunity Metrics Batch Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Line_Metrics_Batch_Size__c</fullName>
        <label>Product Line Metrics Batch Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zero_Month_Rep_Target_Batch_Size__c</fullName>
        <label>Zero Month Rep Target Batch Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rgn_Product_Line_Metrics_Batch_Size__c</fullName>
        <label>Rgn Product Line Metrics Batch Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zero_Month_Territory_Target_Batch_Size__c</fullName>
        <label>Zero Month Territory Target Batch Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zero_Rgn_Product_Line_Targe_Batch_Size__c</fullName>
        <label>Zero Rgion Product Line Targe Batch Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zero_Rep_Product_Line_Target_Batch_Size__c</fullName>
        <label>Zero Rep Product Line Target Batch Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zero_Rgn_Product_Line_Target_Batch_Size__c</fullName>
        <label>Zero Rgion Product Line Targe Batch Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zero_Rgion_Product_Line_Targe_Batch_Size__c</fullName>
        <label>Zero Rgion Product Line Targe Batch Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>